# fast_distributions

./: .gitignore  CMakeLists.txt
cmake/: DisassemblyView.cmake
doc/: Notes.md  curve_fit.py  fast_cdfinv.py  fast_sincos.py  sequences.py  vandermonde_fit.py
include/fast_distributions/: cone_distribution.hpp  generators.hpp  murmur_generator.hpp  normal_distribution.hpp  sphere_distribution.hpp  uniform_distribution.hpp
include/fast_distributions/src/: constants.hpp  entropy.hpp  fast_sincos.hpp  generate_base.hpp  murmur_generator.hpp
src/: CMakeLists.txt
test/: CMakeLists.txt  default_disassembly_test.cpp  visfile.py  visualize.cpp  visualize.hpp  visualize_test.cpp
